@@ -2,14 +2,8 @@ package primegap.util;
 
 import java.io.IOException;
 import java.io.PrintStream;
-import java.lang.management.ManagementFactory;
-import java.lang.management.RuntimeMXBean;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-import java.util.Optional;
-
-import jdk.incubator.vector.VectorOperators;
 
 public class Machine {
 
@@ -40,72 +34,6 @@ public class Machine {
 			new String(proc.getInputStream().readAllBytes()).lines().filter(l -> !l.isBlank()).forEach(out::println);
 		} catch (IOException ignore) {
 		}
-	}
-
-	/**
-	 * Relaunches the current JVM process with --add-modules=jdk.incubator.vector
-	 * appended, forwarding all existing JVM arguments and the main class args.
-	 * Inherits stdin/stdout/stderr so output appears normally.
-	 */
-	public static boolean enableSIMD() {
-		boolean enabled = ModuleLayer.boot().findModule("jdk.incubator.vector").isPresent();
-		// Check if the Vector API incubator module is already loaded
-		if (!enabled) {
-			// Resolve the current java executable path
-			String javaExe = ProcessHandle.current().info().command().orElse("java");
-
-			RuntimeMXBean jvmMeta = ManagementFactory.getRuntimeMXBean();
-
-			List<String> cmd = new ArrayList<>();
-			cmd.add(javaExe);
-
-			// Inject the missing module flag first
-			cmd.add("--add-modules=jdk.incubator.vector");
-
-			// Forward all existing JVM flags (-Xmx, -Xms, -D... etc.)
-			cmd.addAll(jvmMeta.getInputArguments());
-
-			// Forward classpath
-			cmd.add("-cp");
-			cmd.add(jvmMeta.getClassPath());
-
-			// Main class and its arguments
-			String[] parts = Optional.ofNullable(System.getProperty("sun.java.command"))
-					.orElseGet(() -> Arrays.asList(new Exception().getStackTrace()).getLast().getClassName())
-					.split(" ");
-			cmd.addAll(Arrays.asList(parts));
-
-			// Launch child process, sharing all I/O with current process
-			try {
-				int exitCode = new ProcessBuilder(cmd).inheritIO().start().waitFor();
-				System.exit(exitCode);
-			} catch (InterruptedException | IOException e) {
-				// TODO Auto-generated catch block
-				e.printStackTrace();
-			}
-			// Mirror the child exit code
-		}
-		return enabled;
-	}
-
-	// ================= COMMON METHODS =================
-	public static final VectorOperators.Comparison UNSIGNED_GE;
-	static {
-		VectorOperators.Comparison op = null;
-		try {
-			// JDK 25+
-			op = (VectorOperators.Comparison) VectorOperators.class.getField("UGE").get(null);
-		} catch (NoSuchFieldException e) {
-			try {
-				// JDK 17-24 : nom long
-				op = (VectorOperators.Comparison) VectorOperators.class.getField("UNSIGNED_GE").get(null);
-			} catch (Exception ex) {
-				throw new Error(ex);
-			}
-		} catch (Exception e) {
-			throw new Error(e);
-		}
-		UNSIGNED_GE = op;
 	}
 
 	@SuppressWarnings("resource")
